<resources>
    <string name="app_name">WorldTravel3D</string>
    <string name="swipe_down_hint">Swipe down hint</string>
    <string name="attraction_image">Attraction Image</string>
    <string name="swipe_up_hint">Swipe up hint</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="departure_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="people">Number of People</string>
    <string name="search">Search</string>
    <string name="country_flag">Country Flag</string>
    <string name="filter_button">Filter Button</string>
    <string name="language">Language</string>
    <string name="continent">Continent</string>
    <string name="best_months_to_visit">Best Months To Visit</string>
    <string name="religion">Religion</string>
    <string name="no_countries_found">No countries found</string>
    <string name="planning_your_trip">Planning Your Trip</string>
    <string name="flights_icon">Flights Icon</string>
    <string name="flights">Flights</string>
    <string name="hotels_icon">Hotels Icon</string>
    <string name="hotels">Hotels</string>
    <string name="packages_icon">Packages Icon</string>
    <string name="packages">Packages</string>
    <string name="activities_icon">Activities Icon</string>
    <string name="activities">Activities</string>
    <string name="country_summary">Country Summary</string>
    <string name="read_more">Read More</string>
    <string name="best_time_to_visit">Best Time to Visit</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="safety_and_security">Safety and Security</string>
    <string name="safety_icon">Safety Icon</string>
    <string name="weather">Weather</string>
    <string name="spring_icon">Spring Icon</string>
    <string name="spring_march_may">Spring (March - May)</string>
    <string name="summer_icon">Summer Icon</string>
    <string name="summer_june_august">Summer (June - August)</string>
    <string name="autumn_icon">Autumn Icon</string>
    <string name="autumn_september_november">Autumn (September - November)</string>
    <string name="winter_icon">Winter Icon</string>
    <string name="winter_december_february">Winter (December - February)</string>
    <string name="cuisine">Cuisine</string>
    <string name="food_icon">Food Icon</string>
    <string name="popular_food">Popular Food</string>
    <string name="drink_icon">Drink Icon</string>
    <string name="popular_drink">Popular Drink</string>
    <string name="currency">Currency</string>
    <string name="currency_icon">Currency Icon</string>
    <string name="interesting_fact">Interesting Fact</string>
    <string name="interesting_fact_icon">Interesting Fact Icon</string>
    <string name="official_tourism_website">Official Tourism Website</string>
    <string name="website_icon">Website Icon</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="offers_icon">Offers Icon</string>
    <string name="attractions">Attractions</string>
    <string name="attractions_icon">Attractions Icon</string>
    <string name="info">Info</string>
    <string name="info_icon">Info Icon</string>
    <string name="area_icon">Area Icon</string>
    <string name="continent_icon">Continent Icon</string>
    <string name="religion_icon">Religion Icon</string>
    <string name="language_icon">Language Icon</string>
    <string name="population_icon">Population Icon</string>
    <string name="capital_icon">Capital Icon</string>
    <string name="country_3d_image">Country 3D Image</string>
    <string name="return_date_must_be_after_departure_date">Return date must be after departure date.</string>
    <string name="please_select_a_return_date">Please select a return date.</string>
    <string name="please_select_a_departure_date">Please select a departure date.</string>
    <string name="please_enter_the_destination">Please enter the destination.</string>
    <string name="please_enter_the_origin">Please enter the origin.</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="hindi">Hindi</string>
    <string name="malay">Malay</string>
    <string name="chinese">Chinese</string>
    <string name="russian">Russian</string>
    <string name="arabic">Arabic</string>
    <string name="dutch">Dutch</string>
    <string name="portuguese">Portuguese</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="australasia">Australasia</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="europe">Europe</string>
    <string name="judaism">Judaism</string>
    <string name="hinduism">Hinduism</string>
    <string name="buddhism">Buddhism</string>
    <string name="islam">Islam</string>
    <string name="christianity">Christianity</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="safe">Safe</string>
    <string name="ok">OK</string>
    <string name="dangerous">Dangerous</string>
    <string name="read_less">Read Less</string>
</resources>