<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background_color">

    <!-- Back Button -->
<!--    <ImageButton-->
<!--        android:id="@+id/back_button"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_margin="8dp"-->
<!--        android:background="@drawable/button_background"-->
<!--        android:clickable="true"-->
<!--        android:contentDescription="@string/country_details"-->
<!--        android:focusable="true"-->
<!--        android:scaleType="centerInside"-->
<!--        android:src="@drawable/return_button" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:background="@color/theme_sel_col"
        android:elevation="4dp"
        android:padding="8dp"
        app:titleTextColor="@android:color/black"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/go_back"
            />

        <!-- Title in the Center -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/country_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </androidx.appcompat.widget.Toolbar>


    <!-- Main Content -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="go_back" />

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/app_background_color"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="16dp">


            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/app_background_color"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">
            <!-- Country Image -->
            <ImageView
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/country_3d_image"
                android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>
            <!-- Country Name -->
            <TextView
                android:id="@+id/countryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <!-- Country Flag -->
            <ImageView
                android:id="@+id/country_flag"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/country_flag" />

            <!-- Details Grid -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:columnCount="3">

                <!-- Population -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/population_icon"
                        android:src="@drawable/population" />

                    <TextView
                        android:id="@+id/textView_population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Continent -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/continent_icon"
                        android:src="@drawable/continent" />

                    <TextView
                        android:id="@+id/textView_continent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Area -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/area_icon"
                        android:src="@drawable/area" />

                    <TextView
                        android:id="@+id/textView_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Currency -->
                <LinearLayout
                    android:id="@+id/open_currency_element"
                    android:layout_width="0dp"
                    android:layout_margin="4dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/currency_icon"
                        android:src="@drawable/currency" />

                    <TextView
                        android:id="@+id/textView_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Capital -->
                <LinearLayout
                    android:id="@+id/open_capital_element"
                    android:layout_width="0dp"
                    android:layout_margin="4dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/capital_icon"
                        android:src="@drawable/capital" />

                    <TextView
                        android:id="@+id/textView_capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Languages -->
                <LinearLayout
                    android:id="@+id/open_languages_element"
                    android:layout_width="0dp"
                    android:layout_margin="4dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/language_icon"
                        android:src="@drawable/languages" />

                    <TextView
                        android:id="@+id/textView_languages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:columnCount="4">

                <!-- Clickable Info Icon -->
                <LinearLayout
                    android:id="@+id/open_info_element"
                    android:layout_width="0dp"
                    android:layout_margin="4dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:background="@drawable/button_background"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/info_icon"
                        android:src="@drawable/info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text="@string/info"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Clickable Attractions Icon -->
                <LinearLayout
                    android:id="@+id/open_attractions_element"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/button_background"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/attractions_icon"
                        android:src="@drawable/attractions" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text="@string/attractions"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <!-- Clickable Info Icon -->
                <LinearLayout
                    android:id="@+id/button_expand_map"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:background="@drawable/button_background"
                    android:backgroundTintMode="src_over"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:layout_margin="4dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/maps"
                        android:src="@drawable/map_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans"
                        android:gravity="center"
                        android:text="@string/maps"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>